--- a/index.html
+++ b/index.html
@@ -8,8 +8,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+    <div class="container">
+            <div class="jumbotron">
+                    <h3>Add New Issue</h3>
+                    <form onsubmit="test(event)">
+                            <div class="form-group">
+                              <label for="description">Description</label>
+                              <input type="text" class="form-control" id="description" placeholder="Describe the issue">
+                            </div>
+                            <div class="form-group">
+                                    <label for="severity">Severity</label>
+                                    <select class="form-control" id="severity">
+                                      <option>Low</option>
+                                      <option>Medium</option>
+                                      <option>High</option>
+                                    </select>
+                                  </div>
+                                  <div class="form-group">
+                                        <label for="assignedTo">Assigned To</label>
+                                        <input type="text" class="form-control" id="assignedTo" placeholder="Enter responsible">
+                                      </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                          </form>
+                  </div>
+
+                  <div class="list">
+
+                  </div>
+            
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chance/1.0.18/chance.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
